Table: fix handle setting and alignment on FF

--- a/coral-component-table/src/styles/index.styl
+++ b/coral-component-table/src/styles/index.styl
@@ -459,7 +459,7 @@ table[is="coral-table"].is-layouting thead[is="coral-table-head"][sticky] coral-
 
 thead[is="coral-table-head"][sticky] coral-checkbox[coral-table-select] {
   position: relative;
-  top: -16px;
+  top: -4px;
 }
 
 /* END #selectable */
